force-app/main/default/objects/B25__Calendar__c/B25__Calendar__c.object-meta.xml
<CustomObject>
    <description>The Calendar on which Reservations and Dimensions are displayed.</description>
    <label>Calendar</label>
    <nameField>
        <label>Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>