force-app/main/default/objects/B25__Calendar__c/fields/B25__Default__c.field-meta.xml
<CustomField>
    <fullName>B25__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When multiple Single Record Calendars exist for a single Dimension the Calendar with this checkbox wil be used if the Single Record Calendar is loaded with just a Resource id.</description>
    <inlineHelpText>Lorsque plusieurs calendriers à enregistrement unique existent pour une seule dimension, le calendrier avec cette case à cocher sera utilisé si le calendrier à enregistrement unique est chargé avec un seul identifiant de ressource.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>