force-app/main/default/objects/B25__Calendar__c/fields/B25__Default_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>B25__Default_Border_Color__c</fullName>
    <defaultValue>&quot;white&quot;</defaultValue>
    <description>Hex code or valid CSS color name.</description>
    <inlineHelpText>Code hexadécimal ou nom de couleur CSS valide.</inlineHelpText>
    <label>Default Border Color</label>
    <length>32</length>
    <type>Text</type>
</CustomField>