force-app/main/default/objects/B25__Calendar__c/fields/B25__Dimension__c.field-meta.xml
<CustomField>
    <fullName>B25__Dimension__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Dimension plotted on this Calendar.</description>
    <inlineHelpText>La dimension tracée sur ce calendrier.</inlineHelpText>
    <label>Dimension</label>
    <referenceTo>B25__Dimension__c</referenceTo>
    <relationshipLabel>Calendars</relationshipLabel>
    <relationshipName>Calendars</relationshipName>
    <type>Lookup</type>
</CustomField>