force-app/main/default/objects/B25__Calendar__c/fields/B25__Display_Full_Day_Event_As_Bar__c.field-meta.xml
<CustomField>
    <fullName>B25__Display_Full_Day_Event_As_Bar__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked any reservations that are one day or longer will be displayed at the top of the day instead of covering the entire day.</description>
    <inlineHelpText>Lorsque cette option est cochée, toute réservation d’un jour ou plus s’affiche en haut de la journée au lieu de couvrir la journée entière.</inlineHelpText>
    <label>Display Full Day Event As Bar</label>
    <type>Checkbox</type>
</CustomField>