force-app/main/default/objects/B25__Calendar__c/fields/B25__Display_In_User_Timezone__c.field-meta.xml
<CustomField>
    <fullName>B25__Display_In_User_Timezone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, display reservations in the user&apos;s timezone instead of the local timezone. Only enable this if you understand the consequences.</description>
    <inlineHelpText>Lorsque cette option est activée, les réservations s’affichent dans le fuseau horaire de l’utilisateur au lieu du fuseau horaire local. N’activez cette option que si vous en comprenez les conséquences.</inlineHelpText>
    <label>Display In User Timezone</label>
    <type>Checkbox</type>
</CustomField>