force-app/main/default/objects/B25__Calendar__c/fields/B25__Group_Overlapping_Reservations__c.field-meta.xml
<CustomField>
    <fullName>B25__Group_Overlapping_Reservations__c</fullName>
    <description>If more than this number of reservations overlap on the calendar, they will be grouped into a single block that can be expanded.</description>
    <inlineHelpText>Si plus de ce nombre de réservations se chevauchent sur le calendrier, elles seront regroupées en un seul bloc qui pourra être agrandi.</inlineHelpText>
    <label>Group Overlapping Reservations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>