force-app/main/default/objects/B25__Calendar__c/fields/B25__Prevent_Horizontal_Drag__c.field-meta.xml
<CustomField>
    <fullName>B25__Prevent_Horizontal_Drag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if you want to prevent horizontal dragging of events on this Calendar.</description>
    <inlineHelpText>Cochez cette case si vous voulez empêcher le glissement horizontal des événements sur ce calendrier.</inlineHelpText>
    <label>Prevent Horizontal Drag</label>
    <type>Checkbox</type>
</CustomField>