force-app/main/default/objects/B25__Calendar__c/fields/B25__Prevent_Vertical_Drag__c.field-meta.xml
<CustomField>
    <fullName>B25__Prevent_Vertical_Drag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if you want to prevent vertical dragging of events on this Calendar.</description>
    <inlineHelpText>Cochez cette case si vous voulez empêcher le glissement vertical des événements sur ce calendrier.</inlineHelpText>
    <label>Prevent Vertical Drag</label>
    <type>Checkbox</type>
</CustomField>