force-app/main/default/objects/B25__Calendar__c/fields/B25__Prompt_Before_Moving__c.field-meta.xml
<CustomField>
    <fullName>B25__Prompt_Before_Moving__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows the user a confirmation dialog before moving a Reservation on this Calendar.</description>
    <inlineHelpText>Affiche à l’utilisateur un dialogue de confirmation avant de déplacer une réservation sur ce calendrier.</inlineHelpText>
    <label>Prompt Before Moving</label>
    <type>Checkbox</type>
</CustomField>