force-app/main/default/objects/B25__Calendar__c/fields/B25__Reservation_Template_Dimension_Lookup__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Template_Dimension_Lookup__c</fullName>
    <description>The API name of a lookup on Reservation Template to the dimension.</description>
    <inlineHelpText>Le nom API d’une recherche d’un modèle de réservation pour la dimension.</inlineHelpText>
    <label>Reservation Template Dimension Lookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>