force-app/main/default/objects/B25__Calendar__c/fields/B25__Reservation_Title_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Title_Field__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <description>Enter the API name of a Reservation Field to display as the event title on the Calendar.</description>
    <inlineHelpText>Saisissez le nom API d’un champ de réservation à afficher comme titre de l’événement sur le calendrier.</inlineHelpText>
    <label>Reservation Title Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>