force-app/main/default/objects/B25__Calendar__c/fields/B25__Resource_Title_Layout__c.field-meta.xml
<CustomField>
    <fullName>B25__Resource_Title_Layout__c</fullName>
    <description>Use this to change how the Resource Titles are displayed on the Single Record Calendar.</description>
    <inlineHelpText>Utilisez cette option pour modifier la façon dont les titres des ressources sont affichés sur le calendrier à enregistrement unique.</inlineHelpText>
    <label>Resource Title Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horizontal</fullName>
                <default>true</default>
                <label>Horizontal</label>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>