force-app/main/default/objects/B25__Calendar__c/fields/B25__Show_Unlinked_Reservation_Types__c.field-meta.xml
<CustomField>
    <fullName>B25__Show_Unlinked_Reservation_Types__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this is enabled, Reservations with Reservation Types not linked to this Calendar will be visible
		anyway.</description>
    <inlineHelpText>Si cette option est activée, les réservations dont le type de réservation n’est pas lié à ce calendrier seront tout de même visibles.</inlineHelpText>
    <label>Show Unlinked Reservation Types</label>
    <type>Checkbox</type>
</CustomField>