force-app/main/default/objects/B25__Calendar__c/recordTypes/B25__Multi_Resource_Calendar.recordType-meta.xml
<RecordType>
    <fullName>B25__Multi_Resource_Calendar</fullName>
    <active>true</active>
    <description>Configuration record for a multi resource calendar</description>
    <label>Multi Resource Calendar</label>
</RecordType>