force-app/main/default/objects/B25__Calendar__c/recordTypes/B25__Schedule_Calendar.recordType-meta.xml
<RecordType>
    <fullName>B25__Schedule_Calendar</fullName>
    <active>true</active>
    <description>Configuration for Schedule Calendars</description>
    <label>Schedule Calendar</label>
</RecordType>