force-app/main/default/objects/B25__Calendar__c/recordTypes/B25__Single_Resource_Calendar.recordType-meta.xml
<RecordType>
    <fullName>B25__Single_Resource_Calendar</fullName>
    <active>true</active>
    <description>Configuration record for a single resource calendar</description>
    <label>Single Resource Calendar</label>
</RecordType>